--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         
         
-        <form action="/pages/menu/index.html" method="post">
+        <form action="" method="post">
             <div class="div-input">
                 <label for="email">Email:</label><br/>
                 <input name="senha" type="email"/>
