--- a/pages/cadastro/index.html
+++ b/pages/cadastro/index.html
@@ -20,7 +20,7 @@
         </div>
         
         
-        <form action="../menu/index.html">
+        <form action="" method="post">
             <div class="div-input">
                 <label for="email">Email:</label><br/>
                 <input name="senha" type="email"/>
