add close button ad

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="divModal">
             <dialog>
                 <div>
-                    <button class="closeModal">Fechar</button>
-                    <!-- <img src="../../assets/img/doarSangue.png" alt=""> -->
+                    <!-- <button class="closeModal">Fechar</button> -->
+                    <img src="./assets//icons/close-black.png" class="closeModal" alt="">
                 </div>
             </dialog>
         </div>
