--- a/pages/camera/index.html
+++ b/pages/camera/index.html
@@ -9,7 +9,7 @@
     
     <video autoplay></video>
     <canvas></canvas>
-    <button>Tirar Foto</button>
+    <button onclick="foto()">Tirar Foto</button>
 
     <script src="./index.js"></script>
 </body>
