--- a/pages/camera/index.html
+++ b/pages/camera/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Camera</title>
 </head>
 <body>
     
-    <video autoplay></video>
+    <div class="div-cam">
+        <video autoplay></video>
+        <button onclick="foto()">Tirar Foto</button>
+    </div>
     <canvas></canvas>
-    <button onclick="foto()">Tirar Foto</button>
 
     <script src="./index.js"></script>
 </body>
